# libelf

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  aclocal.cmake  appveyor.yml  config.h.cmake.in  configure.cmake  libelf.pc.cmake.in
cmake/: AutoconfHelper.cmake  CMakeDependentVariable.cmake
lib/: 32.getehdr.c  CMakeLists.txt  compat_header.h.cmake.in  elf_repl.h  libelf.def  libelf.h  private.h  sys_elf.h.cmake.in
po/: CMakeLists.txt  de.po
